# itp2_labs

./: .gitignore  README.md  in.txt  out.txt
assignment-1/: main.cpp
assignment-2/: access_level.h  build.sh  main.cpp  rooms.cpp  rooms.h  shell.nix  users.cpp  users.h
assignment-3/: access_level.h  build.sh  main.cpp  rooms.h  users.cpp  users.h
assignment-4/: .gitignore  CMakeLists.txt  README.md  car.h  car_type.h  default.nix  deps.nix  driver.h  main.cpp  order.h  passenger.h  payment_method.h  result  storage.h
assignment-4/gateways/: auth.h  passenger_gateway.h
assignment-4/src/: CMakeLists.txt  car.h  car_type.h  main.cpp  order.h  order_status.h  pinned_address.h  storage.h
assignment-4/src/gateways/: auth.h  auth_token.h  driver_gateway.h  gateway.h  passenger_gateway.h
